--- a/backend/compose.yaml
+++ b/backend/compose.yaml
@@ -2,7 +2,7 @@ version: "3.9"
 
 services:
   postgres:
-    image: "postgres:latest"
+    image: "postgis/postgis:15-3.5-alpine"
     environment:
       POSTGRES_PASSWORD: test
       POSTGRES_USER: test
