--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -48,6 +48,7 @@ _testmain.go
 
 .env
 image/
+test_image/
 
 # This file includes artifacts of Go build that should not be checked in.
 # For files created by specific development environment (e.g. editor),
