--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_riverpod: ^2.6.1
   riverpod_annotation: ^2.6.1
   flutter_dotenv: ^5.2.1
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
