--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -59,6 +59,8 @@ dev_dependencies:
   riverpod_generator: ^2.6.4
   custom_lint: ^0.7.3
   riverpod_lint: ^2.6.4
+  integration_test:
+    sdk: flutter
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
