--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   riverpod_annotation: ^2.6.1
   flutter_dotenv: ^5.2.1
   image_picker: ^1.1.2
+  sqflite: ^2.4.1
+  path: ^1.9.0
 
 dev_dependencies:
   flutter_test:
