--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   sqflite: ^2.4.1
   path: ^1.9.0
   dio: ^5.8.0+1
+  geolocator: ^13.0.3
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
