--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -50,6 +50,9 @@ dependencies:
   uuid: ^4.5.1
   readmore: ^3.0.0
   flutter_rating: ^2.0.2
+  firebase_core: ^3.13.0
+  web_socket_channel: ^3.0.3
+  firebase_storage: ^12.4.5
 
 dev_dependencies:
   flutter_test:
