--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   web_socket_channel: ^3.0.3
   firebase_storage: ^12.4.5
   firebase_messaging: ^15.2.5
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   flutter_test:
