--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   firebase_storage: ^12.4.5
   firebase_messaging: ^15.2.5
   shared_preferences: ^2.5.3
+  firebase_remote_config: ^5.4.4
 
 dev_dependencies:
   flutter_test:
