--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   firebase_messaging: ^15.2.5
   shared_preferences: ^2.5.3
   firebase_remote_config: ^5.4.4
+  flutter_launcher_icons: ^0.14.3
 
 dev_dependencies:
   flutter_test:
@@ -76,6 +77,13 @@ dev_dependencies:
   integration_test:
     sdk: flutter
 
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icon/icon.png"
+  adaptive_icon_background: "#FFFFFF"
+  adaptive_icon_foreground: "assets/icon/icon.png"
+  min_sdk_android: 24
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
