--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   shared_preferences: ^2.5.3
   firebase_remote_config: ^5.4.4
   flutter_launcher_icons: ^0.14.3
+  permission_handler: ^12.0.0+1
 
 dev_dependencies:
   flutter_test:
