--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -61,6 +61,7 @@ dependencies:
     sdk: flutter
   intl: any
   country_flags: ^3.3.0
+  device_info_plus: ^11.4.0
 
 dev_dependencies:
   flutter_test:
